--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "postcss": "^7",
+    "sweetalert2": "^11.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
